AP-2008-08-14-0: Bugfix:      Instalation script for reporting "assumes" correct
                              permission settings for instalation files
                 Bugster:     6734854
                 Issue:       2690
                 Review:      LP

LP-2008-08-13-0: Bugfix:      tr command has wrong replace arguments in some
                              places
                 Merged from: Maintrunk LP-2008-07-22-0
                 Bugster:     6728406
                 Issue:       2677
                 Review:      JO

MD-2008-08-13-0: CVS:         Created V61u5_TAG.
------------------------------------------------

JO-2008-08-05-0: RFE:         ARCo should support SJWC 3.1
                 Bugster:     6733626
                 Issue:       2683
                 Review:      AP

JO-2008-07-24-0: Bugfix:      Exception occurs during the exportation of a query result to pdf
                 Bugster:     6729353
                 Issue:       2676
                 Review:      AP

AP-2008-07-09-0: Bugfix:      dbw install parameters are not verified
                 Bugster:     6713362
                 Issue:       2642
                 Review:      JO

JO-2008-06-19-0: Bugfix:      Wallclock_Time query should be more constrained
                 Bugster:     6715561
                 Issue:       2620
                 Review:      AP

AP-2008-04-28-0: Bugfix:      TABLESPACE values should be written to dbwriter.conf
                 Bugster:     6684968
                 Issue:       2566
                 Review:      JO

PJ-2008-04-25-0: Bugfix:      ARCo should not print exception stack trace in the console
                 Bugster:     6694003
                 Issue:       2565
                 Review:      JO

PJ-2008-04-07-0: Bugfix:      Problem with case sensitivity for queries in ARCo
                 Bugfix:      Switching from Simple Query to Advanced Query removes the Latebingings
                 Bugster:     6680905