@@ -58,22 +58,18 @@ import javax.xml.bind.Unmarshaller;
  * its database definition.
  */
 public class UpdateDbModelCommand extends Command {
+
    /** name of the dbmodel package. */
    public static final String DBMODEL_PACKAGE =
-          "com.sun.grid.util.dbmodel";
-
+         "com.sun.grid.util.dbmodel";
    /**  sql query for the highest version is the
     *   version table. */
    public static final String SQL_VERSION_STMT =
-   "select v_id, v_version, v_time "
-   + "from sge_version "
-   + "where v_id = (select max(v_id) from sge_version)";
-
+         "select v_id, v_version, v_time " + "from sge_version " + "where v_id = (select max(v_id) from sge_version)";
    /**  sql query for the availability test of the table
     *   sge_version. */
    public static final String SQL_TEST_VERSION_STMT =
-      "select count(*) from sge_version";
-
+         "select count(*) from sge_version";
    /** the jaxb context for the dbmodel classes. */
    private JAXBContext jc;
    /** the factory for instances of the dbmodel classes. */
@@ -91,7 +87,7 @@ public class UpdateDbModelCommand extends Command {
          objFactory = new ObjectFactory();
       } catch (JAXBException jaxbe) {
          IllegalStateException ilse =
-             new IllegalStateException("Can't create JAXBContext");
+               new IllegalStateException("Can't create JAXBContext");
          ilse.initCause(jaxbe);
          throw ilse;
       }
@@ -107,12 +103,11 @@ public class UpdateDbModelCommand extends Command {
     * @return  the dbmodel
     */
    private DBModel readModel(final File file)
-                   throws IOException, JAXBException {
+         throws IOException, JAXBException {
       Unmarshaller un = jc.createUnmarshaller();
       DBModel ret = (DBModel) un.unmarshal(file);
       return ret;
    }
-
 
    /**
     * test wether sge_version table is available.
@@ -139,9 +134,9 @@ public class UpdateDbModelCommand extends Command {
          stmt.close();
       }
    }
-
    /** index of the table name column is the meta data. */
    public static final int NAME_COLUMN = 3;
+
    /**
     * get a list of all tables in the database which starts
     * with "sge_".
@@ -155,7 +150,7 @@ public class UpdateDbModelCommand extends Command {
 
       DatabaseMetaData dbMeta = conn.getMetaData();
 
-      String [] tablesTypes = new String[] {
+      String[] tablesTypes = new String[]{
          "TABLE"
       };
 
@@ -202,8 +197,7 @@ public class UpdateDbModelCommand extends Command {
             }
             return ret;
          } catch (JAXBException jaxbe) {
-            throw new IllegalStateException("Can not create "
-                                            + "instance of version");
+            throw new IllegalStateException("Can not create " + "instance of version");
          } finally {
             rs.close();
          }
@@ -225,9 +219,9 @@ public class UpdateDbModelCommand extends Command {
     *               else the highest version id in the table sge_version
     *   @throws SQLException on any sql error
     */
-    Version getExistingVersion(final String schema) throws SQLException {
+   Version getExistingVersion(final String schema) throws SQLException {
       Version ret = null;
-      if (isVersionTableAvailable())  {
+      if (isVersionTableAvailable()) {
          ret = this.getDatabaseVersion();
       } else {
          List tables = this.getSGETables(schema);
@@ -250,8 +244,7 @@ public class UpdateDbModelCommand extends Command {
                ret.setName("Initial version");
             }
          } catch (JAXBException jaxbe) {
-            throw new IllegalStateException("Can not create "
-                                            + "instanceof version");
+            throw new IllegalStateException("Can not create " + "instanceof version");
          }
       }
       return ret;
@@ -275,7 +268,7 @@ public class UpdateDbModelCommand extends Command {
 
       StringTokenizer st = new StringTokenizer(args, " ");
 
-      String [] argv = new String[st.countTokens()];
+      String[] argv = new String[st.countTokens()];
       int i = 0;
       while (st.hasMoreTokens()) {
          argv[i++] = st.nextToken();
@@ -285,10 +278,10 @@ public class UpdateDbModelCommand extends Command {
 
          String schema = null;
          boolean onlyId = false;
-         switch(argv.length) {
+         switch (argv.length) {
             case 2:
-              schema = argv[1];
-              break;
+               schema = argv[1];
+               break;
             case 3:
                if (argv[1].equals("-only-id")) {
                   onlyId = true;
@@ -309,8 +302,8 @@ public class UpdateDbModelCommand extends Command {
                SGELog.info(Integer.toString(dbVersion.getId()));
             } else {
                SGELog.info("version {0} (id={1})",
-                            dbVersion.getName(),
-                            new Integer(dbVersion.getId()));
+                     dbVersion.getName(),
+                     new Integer(dbVersion.getId()));
             }
             return 0;
          } catch (SQLException sqle) {
@@ -321,8 +314,6 @@ public class UpdateDbModelCommand extends Command {
          return install(argv);
       }
    }
-
-
 
    /**
     * install a new version of the database.
@@ -341,19 +332,23 @@ public class UpdateDbModelCommand extends Command {
       boolean tryrun = false;
       int argIndex = 0;
       int optionCount = argv.length - 3;
-      
-      while( argIndex < optionCount) {
-         if(argv[argIndex].equals("-dry-run")) {
+      Connection conn = getConnection();
+      Connection conn2 = getConnection2();
+      Statement stmt = null;
+      Statement stmt2 = null;
+
+      while (argIndex < optionCount) {
+         if (argv[argIndex].equals("-dry-run")) {
             argIndex++;
             tryrun = true;
             SGELog.warning("Run in dry mode, no action on the database will be executed");
          } else {
             SGELog.severe("Unknown option " + argv[argIndex]);
             SGELog.info(usage());
-            return 1;            
+            return 1;
          }
       }
-      
+
       if (argIndex > argv.length + 3) {
          SGELog.severe("Invalid number of arguments");
          SGELog.info(usage());
@@ -387,16 +382,16 @@ public class UpdateDbModelCommand extends Command {
             return 0;
          }
 
-         if(!tryrun) {
+         if (!tryrun) {
             try {
                SGELog.finest("switch off auto commit mode");
-               getConnection().setAutoCommit(false);
+               conn.setAutoCommit(false);
                /* The secondary connection is used to create synonyms for Oracle db.
                 * This connection is initiated before calling install function.
                 * If the connection is set, we set the autocommit to false.
                 */
-               if (getConnection2() != null) {
-                  getConnection2().setAutoCommit(false);
+               if (conn2 != null) {
+                  conn2.setAutoCommit(false);
                }
             } catch (SQLException sqle) {
                SGELog.severe(sqle, "Can not switch off the auto commit mode");
@@ -408,112 +403,106 @@ public class UpdateDbModelCommand extends Command {
          Version tmpVersion = null;
          Version instVersion = null;
          Iterator iter = null;
-         Connection conn = getConnection();
-         Statement stmt = conn.createStatement();
-         Statement stmt2 = null;
+         SQLItem item = null;
+         stmt = conn.createStatement();
          /* The secondary connection is used to create synonyms for Oracle db.
           * This connection is initiated before calling install function.
           * If the connection is set, we prepare the statement stmt2.
           */
-         if (getConnection2() != null) {
-            stmt2 = getConnection2().createStatement();
+         if (conn2 != null) {
+            stmt2 = conn2.createStatement();
          }
-         SQLItem item = null;
-         try {
-            for (int i = dbVersion.getId() + 1;
-                 i <= versionId.intValue(); i++) {
 
-               iter = versionList.iterator();
-               instVersion = null;
-               while (iter.hasNext()) {
-                  tmpVersion = (Version) iter.next();
-                  if (tmpVersion.getId() == i) {
-                     instVersion = tmpVersion;
-                     break;
-                  }
-               }
-               if (instVersion == null) {
-                  SGELog.severe("Version with id {0} is not defined in {1}",
-                                 new Integer(i), file);
-                  return 1;
-               }
-               SGELog.info("Install version {0} (id={1}) -------",
-                            instVersion.getName(),
-                            new Integer(instVersion.getId()));
+         for (int i = dbVersion.getId() + 1;
+               i <= versionId.intValue(); i++) {
 
-               iter = instVersion.getItem().iterator();
-               
-               while (iter.hasNext()) {
-                  item = (SQLItem) iter.next();
-                  String descr = getSQLUtil().replaceVariables(item.getDescription());
-                  String sql = getSQLUtil().replaceVariables(item.getSql());
-                  
-                  if (tryrun) {
-                     SGELog.info(sql.trim() + ";");
-                  } else {
-                     SGELog.info(descr);
-                     SGELog.fine("execute {0}", sql);
-                     /* Check which statement use for executing sql command.
-                      * For the synonyms we use the secondary connection.
-                      */
-                     if (!item.isSetSynonym() || !item.isSynonym()) {
-                     stmt.execute(sql);
-                     } else {
-                        stmt2.execute(sql);
-                  }
+            iter = versionList.iterator();
+            instVersion = null;
+            while (iter.hasNext()) {
+               tmpVersion = (Version) iter.next();
+               if (tmpVersion.getId() == i) {
+                  instVersion = tmpVersion;
+                  break;
                }
-               }
-               
+            }
+            if (instVersion == null) {
+               SGELog.severe("Version with id {0} is not defined in {1}",
+                     new Integer(i), file);
+               return 1;
+            }
+            SGELog.info("Install version {0} (id={1}) -------",
+                  instVersion.getName(),
+                  new Integer(instVersion.getId()));
+
+            iter = instVersion.getItem().iterator();
+
+            while (iter.hasNext()) {
+               item = (SQLItem) iter.next();
+               String descr = getSQLUtil().replaceVariables(item.getDescription());
+               String sql = getSQLUtil().replaceVariables(item.getSql());
+
                if (tryrun) {
-                 SGELog.info("COMMIT;");
+                  SGELog.info(sql.trim() + ";");
                } else {
-                  SGELog.info("commiting changes");
-                  getConnection().commit();
-                  if (getConnection2() != null) {
-                     getConnection2().commit();
+                  SGELog.info(descr);
+                  SGELog.fine("execute {0}", sql);
+                  /* Check which statement use for executing sql command.
+                   * For the synonyms we use the secondary connection.
+                   */
+                  if (!item.isSetSynonym() || !item.isSynonym()) {
+                     stmt.execute(sql);
+                  } else {
+                     stmt2.execute(sql);
                   }
-                  SGELog.info("Version {0} (id={1}) successfully installed",
-                               instVersion.getName(),
-                               new Integer(instVersion.getId()));
                }
             }
-            return 0;
-         } finally {
-            stmt.close();
-            if (stmt2 != null) {
-               stmt2.close();
-            }
 
+            if (tryrun) {
+               SGELog.info("COMMIT;");
+            } else {
+               SGELog.info("commiting changes");
+               conn.commit();
+               if (conn2 != null) {
+                  conn2.commit();
+               }
+               SGELog.info("Version {0} (id={1}) successfully installed",
+                     instVersion.getName(),
+                     new Integer(instVersion.getId()));
+            }
          }
+         return 0;
       } catch (IOException ioe) {
          SGELog.severe(ioe, "I/O Error while reading file {0}: {1}",
-                        file, ioe.getMessage());
+               file, ioe.getMessage());
          return 1;
       } catch (JAXBException jaxbe) {
          SGELog.severe(jaxbe, "Can not unmarshal file {0}: {1}",
-                        file, jaxbe.toString());
+               file, jaxbe.toString());
          return 1;
       } catch (SQLException sqle) {
          SGELog.severe(sqle, "SQL error: {0}", sqle.getMessage());
          try {
-            getConnection().rollback();
-            if (getConnection2() != null) {
-               getConnection2().rollback();
+            conn.rollback();
+            if (conn2 != null) {
+               conn2.rollback();
             }
          } catch (SQLException sqle1) {
             SGELog.severe(sqle1, "Can not rollback: {0}", sqle1.getMessage());
          }
          return 1;
       } finally {
-
          try {
+            stmt.close();
+            if (stmt2 != null) {
+               stmt2.close();
+            }
             SGELog.finest("switch on auto commit mode");
-            getConnection().setAutoCommit(true);
-            if (getConnection2() != null) {
-               getConnection2().setAutoCommit(true);
+            conn.setAutoCommit(true);
+            if (conn2 != null) {
+               conn2.setAutoCommit(true);
             }
          } catch (SQLException sqle) {
-            SGELog.severe(sqle, "Can not switch on the auto commit mode");
+            SGELog.warning(sqle,"Error in SQL Statement");
             return 1;
          }
       }
@@ -525,9 +514,6 @@ public class UpdateDbModelCommand extends Command {
     * @return the usage message
     */
    public final String usage() {
-      return getName()
-             + "(print_db_version -only-id |"
-             + "<version> [-dry-run ]<dbmodel file>) <schema>";
+      return getName() + "(print_db_version -only-id |" + "<version> [-dry-run ]<dbmodel file>) <schema>";
    }
-
 }
